[gd_scene load_steps=2 format=3 uid="uid://qf346rsqessh"]

[ext_resource type="Script" uid="uid://bbect1cb2q5vs" path="res://Scripts/systems/inventory.gd" id="1_3dych"]

[node name="Inventory" type="CanvasLayer"]
script = ExtResource("1_3dych")
metadata/_custom_type_script = "uid://bbect1cb2q5vs"

[node name="GridContainer" type="GridContainer" parent="."]
z_index = 3
custom_minimum_size = Vector2(20, 20)
anchors_preset = -1
anchor_right = 0.0458333
anchor_bottom = 0.0125
offset_left = 13.0
offset_top = 29.0
offset_right = 253.0
offset_bottom = 61.0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 6
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
anchors_preset = -1
anchor_top = -0.0319444
anchor_right = 0.14
anchor_bottom = -0.00555556
offset_left = 8.0
offset_top = 29.0
offset_right = 140.0
offset_bottom = 78.0
color = Color(0, 0, 0, 0.784314)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
z_index = 2
offset_left = 11.0
offset_top = 3.0
offset_right = 51.0
offset_bottom = 26.0
text = "Day: "

[node name="DayCount" type="Label" parent="."]
z_index = 2
offset_left = 47.0
offset_top = 3.0
offset_right = 87.0
offset_bottom = 26.0

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
